--- a/src/input.css
+++ b/src/input.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@extend url('./fonts/stylesheet.css');
 
 .imi-btn {
   background-color: theme(colors.dark-red);
@@ -11,7 +12,8 @@
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  font-size: 1.22rem;
+  font-size: 1.25rem;
+  font-family: 'montserrat_semibold', 'sans-serif'
 }
 
 .imi-container {
@@ -24,9 +26,9 @@
   width: 100%;
   text-align: center;
   background-color: #71707380;
-  height: 60px;
+  height: 100px;
   display: flex;
-  align-items: end;
+  align-items: center;
   justify-content: center;
   padding: 15px;
 }
@@ -40,6 +42,38 @@
   display: flex;
   align-items: center;
 }
+
 .sm-container li a img {
   margin-right: 14px;
+}
+
+.banner-caption {
+  max-width: 1536px;
+  z-index: 10;
+  position: absolute;
+  width: 100%;
+  margin: auto;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.inside-page ul li {
+  margin-bottom: 10px;
+}
+
+.tab-content {
+  display: none;
+}
+
+.tab-content.active {
+  display: block;
+}
+
+.tab-button.active {
+  color: theme(colors.imi-red);
 }
